--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     width: inherit;
     height: 88%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -68,6 +70,15 @@ body{
 
 .card-img:hover{
     transform: scale(1.1);
+}
+.my-message{
+    padding-bottom: 100px;
+}
+.my-border-placeholder{
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+
 }
 
 .debug{
