--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body{
     left: 0;
     bottom: 0;
     right: 0;
+    display: block;
     width: inherit;
     height: 88%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -57,6 +58,10 @@ body{
     color: var(--color-white);
     
 
+}
+
+img{
+    display: block;
 }
 
 .my-plus:hover {
